# Windows-Package-Manager

./: .gitignore  CMakeLists.txt  README.md  Setup.ps1  Uninstall.ps1  setup.bat
src/: main.cpp
src/adapters/: AdapterUtils.cpp  AdapterUtils.h  ChocoAdapter.cpp  ChocoAdapter.h  IPackageAdapter.h  ScoopAdapter.cpp  ScoopAdapter.h  WingetAdapter.cpp  WingetAdapter.h
src/core/: Logger.cpp  Logger.h  PackageInfo.h  ProcessRunner.cpp  ProcessRunner.h
src/gui/: BackendBridge.cpp  BackendBridge.h  i18n.cpp  i18n.h
src/gui/win32/: Application.cpp  Application.h  ClickRects.h  Footer.cpp  Footer.h  IconManager.cpp  IconManager.h  InputState.h  Renderer.cpp  Renderer.h  Screens.cpp  Screens.h  Sidebar.cpp  Sidebar.h  TaskDrawer.cpp  TaskDrawer.h  Theme.h  TopBar.cpp  TopBar.h  resources.rc
src/services/: TaskQueue.cpp  TaskQueue.h
